--- a/MyAuth/templates/activate.html
+++ b/MyAuth/templates/activate.html
@@ -86,7 +86,7 @@
     }
 
     if (uid && token) {
-        fetch('https://blogz-django.onrender.com/auth/users/activation/', {
+        fetch('https://blogz-sdameer.onrender.com/auth/users/activation/', {
 
         method: 'POST',
         headers: {
