--- a/MyApp/templates/navbar.html
+++ b/MyApp/templates/navbar.html
@@ -320,7 +320,7 @@
                 
                 <!-- Add Blog Button for authenticated users -->
                 {% if user.is_authenticated %}
-                <a href="{% url 'add_blog' %}" class="nav-link primary">✏️ Add Blog</a>
+                <a href="{% url 'add_blog' %}" class="nav-link primary">Add Blog</a>
                 &nbsp;&nbsp;
                 {% endif %}
             </div>
