--- a/MyApp/templates/navbar.html
+++ b/MyApp/templates/navbar.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% comment %} <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% endcomment %}
+    <meta name="viewport" content="width=1024, initial-scale=0.8">
+
     <title>Blogz Navbar</title>
     <style>
         :root {
