--- a/MyApp/templates/ratelimit_exceeded.html
+++ b/MyApp/templates/ratelimit_exceeded.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta name="viewport" content="width=1024, initial-scale=0.8">
+  <meta charset="UTF-8" />
   <title>Rate Limit Exceeded</title>
   <style>
     body {
