--- a/MyAuth/templates/forgot_password.html
+++ b/MyAuth/templates/forgot_password.html
@@ -3,8 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=1024, initial-scale=0.8">
     <title>Forgot Password</title>
     <style>
         * {
